<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="9dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/backToListButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Back to List"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"/>


        <TextView
            android:id="@+id/title_add_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_edit_product"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Pname"
            android:layout_marginTop="12dp" />

        <EditText
            android:id="@+id/etProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DP"
            android:minLines="3"
            android:gravity="top"
            android:layout_marginTop="12dp"
            />
        <EditText
            android:id="@+id/Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Picture"
            android:layout_marginTop="12dp" />
        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            />
        <Button
            android:id="@+id/btnSaveProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SaveProduct"
            android:layout_marginTop="16dp" />


    </LinearLayout>
</ScrollView>
